tests/snapshots/compile_file__id.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/id.bend
---
@main = (a a)
