tests/snapshots/compile_file__id.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/id.hvm
---
@main = (a a)
