tests/snapshots/compile_file__infer_dup.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/infer_dup.bend
---
@main = ({(a b) a} b)
