tests/snapshots/compile_file__infer_dup.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/infer_dup.hvm
---
@main = ({(a b) a} b)
