tests/snapshots/compile_file__inline_app.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/inline_app.hvm
---
@Rul3 = (a a)
@main = a
& @Rul3 ~ (@Rul3 a)

