tests/snapshots/compile_file__inlining.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/inlining.bend
---
@Era = *

@Num = 42

@RefToRef = @Era

@main = a
  & @Era ~ (@Num (@RefToRef a))
