tests/snapshots/compile_file__inlining.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/inlining.hvm
---
@Era = *

@Num = #42

@RefToRef = @Era

@main = a
  & @Era ~ (@Num (@RefToRef a))
