tests/snapshots/compile_file__just_a_name.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/just_a_name.bend
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/compile_file/just_a_name.bend :
[1m- expected:[0m pattern or '='
[1m- detected:[0m end of input
[0m 1 | asdf[0m
