tests/snapshots/compile_file__just_data.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file/just_data.bend
---
[4m[1m[31mErrors:[0m
In tests/golden_tests/compile_file/just_data.bend :
[1m- expected:[0m Top-level name
[1m- detected:[0m end of input
[0m 1 | type[4m[31m [0m
